Fix admin login: reset password on every startup, add proper error handling